[package]
name = "rusctkey"
version = "0.0.1"
description = "Misskey Client"
authors = ["yu256"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.17", features = ["json", "multipart"] }
once_cell = "1.17.1"
async-std = { version = "1.12.0", features = [ "tokio1" ] }
chrono = "0.4.24"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
