[package]
name = "rusctkey"
version = "0.0.1"
description = "Misskey Client"
authors = ["yu256"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tauri = { version = "1.4.1", features = ["dialog-open"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
once_cell = "1.18.0"
async-std = { version = "1.12.0", features = [ "tokio1" ] }
html-escape = "0.2.13"
regex = "1.8.4"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
futures = "*"
anyhow = "1.0.72"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
# crate-type = ["staticlib", "cdylib", "rlib"]
